--- a/src/sample/close/close.fxml
+++ b/src/sample/close/close.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="113.0" prefWidth="275.0" style="-fx-background-color: d2d2d2;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.CloseController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="113.0" prefWidth="275.0" style="-fx-background-color: d2d2d2;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.close.CloseController">
    <children>
       <Text layoutX="115.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
       <Button layoutX="44.0" layoutY="54.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="55.0" text="yes" />
